Indicate child dropdown toggle open state

--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -105,8 +105,12 @@
 		&:last-child
 			display none
 		
-	&.-open > .dropdown__menu
-		display flex
+	&.-open
+		> .dropdown__toggle
+			background-color $silverglow
+
+		> .dropdown__menu
+			display flex
 		
 	&.-notifications
 		.dropdown__menu
