--- a/src/base/palette.styl
+++ b/src/base/palette.styl
@@ -12,7 +12,7 @@ $dark500 = mix($dark, $silver, 10%)
 $dark600 = mix($dark, $silver, 20%)
 $dark700 = mix($dark, $silver, 30%)
 
-$muted = mix($dark, $silver)
+$muted = lighten($dark, 25%)
 
 $shade = alpha($silver, 75%)
 
