--- a/src/base/typography.styl
+++ b/src/base/typography.styl
@@ -34,15 +34,15 @@ p
 
 a
 	text-decoration none
-	color $blue
+	color darken($blue, 25%)
 
 	&:hover,
 	&:focus
 		text-decoration underline
-		color mix($blue, $ebony, 75%)
+		color darken($blue, 50%)
 	
 	&:active
-		color $ebony
+		color darken($blue, 50%)
 
 	&:focus-visible
 		outline thin dotted
