--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -71,7 +71,7 @@ body
 
 .pfoot
 	margin-top auto
-	padding 15px 0
+	padding 1rem 0
 	border-top 1px solid $silver
 	color $muted
 
@@ -83,15 +83,15 @@ body
 			color darken($muted, 20%)
 
 	&__logo
-		margin 10px 0
+		margin 0.5rem 0
 
 	&__social a
-		margin-right 5px
+		margin-right 0.25rem
 
 	&__nav
 		float right
 		width 40%
-		margin 10px 0
+		margin 0.5rem 0
 		text-align center
 
 		ul
@@ -100,7 +100,7 @@ body
 			padding-left 0
 
 			li
-				padding 12px 0
+				padding 0.75rem 0
 
 	&__legal
 		float right
@@ -120,12 +120,12 @@ body
 		text-align center
 
 		&__rights
-			margin-top 10px
+			margin-top 0.5rem
 
 		&__nav
 			float none
 			width auto
-			margin-bottom 25px
+			margin-bottom 1.5rem
 
 		&__legal
 			float none
