Tweak anchor colors

--- a/src/base/typography.styl
+++ b/src/base/typography.styl
@@ -34,15 +34,15 @@ p
 
 a
 	text-decoration none
-	color darken($blue, 25%)
+	color darken($blue, 19.5%) // Achieves 4.5 contrast ratio on white background.
 
 	&:hover,
 	&:focus
 		text-decoration underline
-		color darken($blue, 50%)
+		color darken($blue, 39%)
 	
 	&:active
-		color darken($blue, 50%)
+		color darken($blue, 39%)
 
 	&:focus-visible
 		outline thin dotted
