Convert more units to rem

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -23,9 +23,11 @@ body
 		height 40px
 		border-radius 0.25rem
 	
-		&.-user img
-			margin-left 10px
-			border-radius 0.25rem
+		&.-user
+			margin-left 0.5rem
+
+			img
+				border-radius 0.25rem
 
 		&.-link,
 		&.-bell > a
