--- a/src/widgets/tabs/index.styl
+++ b/src/widgets/tabs/index.styl
@@ -28,7 +28,7 @@
 
 		> .badge
 			float right
-			margin-left 10px
+			margin-left 0.5rem
 			color $muted
 
 		&.-active
@@ -41,7 +41,7 @@
 			opacity 0.75
 
 		> .icon + .text
-			margin-left 10px
+			margin-left 0.5rem
 	
 		img.icon
 			margin-top -2px
