--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -53,7 +53,7 @@ th
 			font-weight bold
 			
 			.text + .icon
-				margin-left 5px
+				margin-left 0.25rem
 
 	> thead:first-child > tr:first-child > th,
 	> thead:first-child > tr:first-child > td
