--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -26,7 +26,7 @@
 
 		> .badge
 			float right
-			margin-left 10px
+			margin-left 0.5rem
 			color $muted
 
 		&:focus,
@@ -52,7 +52,7 @@
 			border 1px solid $silver
 
 		> .icon + .text
-			margin-left 10px
+			margin-left 0.5rem
 	
 		img.icon
 			margin-top -2px
