--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -8,7 +8,7 @@ body
 	display flex
 	flex-direction column
 	min-height 100vh
-	background-color #f7f9fc
+	background-color lighten(mix($blue, $silver, 10%), 82.5%)
 
 .phead
 	margin-bottom 25px
