--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -85,7 +85,7 @@ body
 			color darken($muted, 20%)
 
 	&__logo
-		margin 0.5rem 0
+		margin 0.5rem 0 1.5rem
 
 	&__social a
 		margin-right 0.25rem
