Add dark anchor style

--- a/src/base/typography.styl
+++ b/src/base/typography.styl
@@ -53,6 +53,14 @@ a
 	&:focus,
 	&::-moz-focus-inner
 		outline none
+	
+	&.-dark
+		&,
+		&:hover,
+		&:focus,
+		&:active
+			color $dark
+		
 
 blockquote :last-child
 	margin-bottom 0
