--- a/src/base/typography.styl
+++ b/src/base/typography.styl
@@ -45,10 +45,8 @@ a
 		color darken($blue, 39%)
 
 	&:focus-visible
-		outline thin dotted
-		outline 0.5rem auto Highlight
-		outline 0.5rem auto -webkit-focus-ring-color
-		outline-offset 0.5rem
+		outline $blueglow auto 0.25rem
+		outline-offset 0.25rem
 	
 	&:focus,
 	&::-moz-focus-inner
