--- a/src/base/typography.styl
+++ b/src/base/typography.styl
@@ -6,7 +6,7 @@ html
 	font-size 16px
 
 body 
-	font-family 'Ubuntu', 'Hind Siliguri', 'Helvetica', sans-serif
+	font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, 'Hind Siliguri', Cantarell, 'Helvetica Neue', sans-serif
 	line-height 1.75em
 	color $dark
 	direction 'ltr'
