Use default button color from palette

--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -87,7 +87,7 @@ _button(name, bg, edge=20%, hover=10%, active=20%)
 		.icon
 			filter luminosity(darken(bg, active)) < 0.5 ? invert(100%) sepia(100%) saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%) !important : none
 
-_button('default', #e1e5ec)
+_button('default', $silver)
 _button('blue', $blue)
 _button('red', $red)
 _button('simple', white)
