Clean up label styles

--- a/src/base/label.styl
+++ b/src/base/label.styl
@@ -4,15 +4,4 @@
 @require './palette'
 
 .label
-	padding 3px 6px 3px 6px
-	font-size 1em
-	font-weight normal
-	color white
-
-h1 .label,
-h2 .label,
-h3 .label,
-h4 .label,
-h5 .label,
-h6 .label
-	font-size 75%
+	padding 0.125rem 0.25rem
