Define more typography style

--- a/src/base/typography.styl
+++ b/src/base/typography.styl
@@ -77,6 +77,16 @@ summary
 		.icon
 			transform rotate(90deg)
 
+ul,
+ol
+	margin 0 0 0.5rem
+
+ul ul,
+ol ul,
+ul ol,
+ol ol
+	margin-bottom 0
+
 dl
 	margin-bottom 1.25em
 
@@ -86,3 +96,15 @@ dt
 
 dd
 	margin-left 0
+
+blockquote
+	margin 0 0 1.25rem
+	padding 0.5rem 1.25rem
+	border-left 0.25rem solid $silver
+
+blockquote
+	p,
+	ul,
+	ol
+		&:last-child
+			margin-bottom 0
