Add extra padding around hero panel body

--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -92,6 +92,9 @@
 		> .panel__body,
 		> .panel__foot
 			display none
+	
+	&.-hero &__body
+			padding 2.5rem
 
 a > .panel
 	transition border-color $fast ease-in
