--- a/src/base/typography.styl
+++ b/src/base/typography.styl
@@ -108,3 +108,8 @@ blockquote
 	ol
 		&:last-child
 			margin-bottom 0
+
+hr
+	margin 1.25rem 0
+	border 0
+	border-top 1px solid lighten($silver, 25%)
