--- a/src/base/index.styl
+++ b/src/base/index.styl
@@ -3,6 +3,7 @@
 @require './reset'
 @require './palette'
 @require './grid'
+@require './flex'
 @require './flow'
 @require './font'
 @require './typography'
