Add flow composition style

--- a/src/base/flow.styl
+++ b/src/base/flow.styl
@@ -1,4 +1,13 @@
 // Copyright 2022 Furqan Software Ltd. All Rights Reserved.
 
-.flow > * + *
-	margin-top 1rem
+.flow
+	> * + *
+		margin-top 1rem
+
+	.flow__item
+		&.-m-y-3
+			margin-top 3rem
+			margin-bottom 3rem
+
+		&.-m-b-2
+			margin-bottom 2rem
