Clear margins in reset.styl

--- a/src/base/reset.styl
+++ b/src/base/reset.styl
@@ -1,14 +1,9 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
-*
+*,
+::before,
+::after
 	box-sizing border-box
-
-body
-	margin 0
-
-// img, video, canvas, audio, iframe, embed, object
-// 	display block
-// 	vertical-align middle
 
 article,
 aside,
@@ -24,6 +19,19 @@ nav,
 section,
 summary 
 	display block
+
+body,
+dl,
+h1,
+h2,
+h3,
+h4,
+p,
+pre
+	margin 0	
+
+html
+	line-sizing normal
 
 // TO REMOVE OR MOVE ELSEWHERE
 
