--- a/src/widgets/flair/index.styl
+++ b/src/widgets/flair/index.styl
@@ -6,7 +6,6 @@
 	display flex
 	flex-wrap wrap
 	gap 0.25em 1rem
-	margin-top 0.5em
 	
 	&__item
 		display flex
@@ -29,6 +28,9 @@
 
 		+ .text
 			margin-left 5px
+	
+	&:empty
+		display none
 
 // Other Contexts
 
