Add scroll style for pre

--- a/src/base/typography.styl
+++ b/src/base/typography.styl
@@ -107,3 +107,7 @@ hr
 	margin 1.25rem 0
 	border 0
 	border-top 1px solid lighten($silver, 25%)
+
+pre.-scroll
+	overflow-y auto
+	-webkit-overflow-scrolling touch
