--- a/src/base/color.styl
+++ b/src/base/color.styl
@@ -18,3 +18,6 @@ _color('blue', $blue)
 _color('green', $green)
 _color('red', $red)
 _color('orange', $orange)
+
+.font-white
+	color white !important
