Use semi-bold font on table heads

--- a/src/base/table.styl
+++ b/src/base/table.styl
@@ -39,8 +39,8 @@ th
 		border-bottom 2px solid lighten($silver, 50%)
 		
 		> th
-			font-weight bold
-			
+			font-weight 500
+
 			.text + .icon
 				margin-left 0.25rem
 
