Add style for artifact fragments

--- a/src/base/artifact.styl
+++ b/src/base/artifact.styl
@@ -9,6 +9,12 @@
 	
 	> * + *
 		margin-top 1.5rem
+	
+	&__fragment
+		display contents
+		
+		> * + *
+			margin-top 1.5rem
 
 	h1
 		line-height 1.85em
