--- a/src/widgets/modal/index.styl
+++ b/src/widgets/modal/index.styl
@@ -49,7 +49,8 @@
 		width auto
 		margin 0.5rem
 		border-radius 0.25rem
-		overflow hidden
+		// Fixes https://gitlab.furqansoftware.net/toph/sleek/-/issues/8
+		// overflow hidden
 		background-color white
 		box-shadow 0 0.5rem 1rem $shadow5
 
