Simplify padding within pmenu items

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -42,7 +42,7 @@ body
 				background-color lighten($dark, 5%)
 
 		&.-link
-			padding 7px 8px 9px
+			padding 8px
 			line-height 24px
 		
 		&.-bell > a
