Add grid-style dropdown menus

--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -45,7 +45,7 @@ body
 			text-decoration none
 			transition background-color $fast ease-in
 
-			img
+			.dropdown__toggle img
 				display block
 				opacity 0.35
 				transition opacity $fast ease-in
@@ -56,7 +56,7 @@ body
 				text-decoration none
 				background-color $silverglow
 
-				img
+				.dropdown__toggle img
 					opacity 0.5
 
 		&.-link
