Rename pmenu dropdown class

--- a/src/layouts/arena/index.styl
+++ b/src/layouts/arena/index.styl
@@ -30,7 +30,7 @@ body
 				border-radius 0.25rem
 
 		&.-link,
-		&.-bell > a
+		&.-drop > a
 			transition background-color $fast ease-in
 
 			img
@@ -45,7 +45,7 @@ body
 			padding 8px
 			line-height 24px
 		
-		&.-bell > a
+		&.-drop > a
 			display block
 			padding 8px
 		
