--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -40,7 +40,7 @@ body
 				border-radius 0.25rem
 
 		&.-link,
-		&.-bell > a
+		&.-drop > a
 			border-radius 0.25rem
 			text-decoration none
 			transition background-color $fast ease-in
@@ -52,7 +52,7 @@ body
 				background-color $silverglow
 
 		&.-link,
-		&.-bell > a
+		&.-drop > a
 			> img,
 			.dropdown__toggle img
 				display block
@@ -70,7 +70,7 @@ body
 			padding 8px
 			line-height 24px
 		
-		&.-bell > a
+		&.-drop > a
 			display block
 			padding 8px
 		
