Add display and border radius utilities

--- a/src/base/index.styl
+++ b/src/base/index.styl
@@ -20,6 +20,8 @@
 @require './pagination'
 @require './alert'
 @require './progress'
-@require './color'
+@require './display'
 @require './size'
 @require './space'
+@require './border'
+@require './color'
