--- a/src/base/size.styl
+++ b/src/base/size.styl
@@ -1,8 +1,8 @@
 // Copyright 2022 Furqan Software Ltd. All Rights Reserved.
 
 _kinds = {
-    'w': width, 'mw': max-width, 'nw': min-width,
-    'h': height, 'mh': max-height, 'nh': min-height
+    'w': 'width', 'mw': 'max-width', 'nw': 'min-width',
+    'h': 'height', 'mh': 'max-height', 'nh': 'min-height'
 }
 for kc, k in _kinds
     for p in 25 50 75 100
