--- a/src/base/flex.styl
+++ b/src/base/flex.styl
@@ -15,13 +15,16 @@
 	&.-gap-1
 		gap 1rem
 
-	&.-j-center
+	&.-jc-center
 		justify-content center
 
-	&.-j-right
+	&.-jc-around
+		justify-content space-around
+
+	&.-jc-right
 		justify-content right
 
-	&.-a-center
+	&.-ai-center
 		align-items center
 
 	&.-wrap
@@ -51,7 +54,7 @@
 			> *
 				flex-basis 100%
 
-		.-lmd-a-items
+		.-lmd-ai-center
 			align-items center
 
 @media (max-width: 767px)
