Use flex in pmenu

--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -25,13 +25,12 @@ body
 
 .pmenu
 	float right
+	display flex
 	margin 1rem 0
 
 	&__item
 		position relative
-		float left
 		display block
-		height 40px
 	
 		&.-user
 			margin-left 0.5rem
