Add style for pmenu divider

--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -80,6 +80,15 @@ body
 			background-color alpha($red, 75%)
 			color white
 
+	&__divider
+		position relative
+		float left
+		display block
+		height 40px
+		margin 0.75rem
+		border-right 1px solid $silver
+		height 1rem
+
 .pfoot
 	margin-top auto
 	padding 1rem 0
