Add margin auto utilities

--- a/src/base/space.styl
+++ b/src/base/space.styl
@@ -18,3 +18,10 @@ for n in (0..5)
                     ec = substr(e, 0, 1)
                     .{kc}{ec}-{x}
                         {k}-{e} unit(n/d, rem)
+
+.m-auto
+    margin auto
+for e in top right bottom left
+    ec = substr(e, 0, 1)
+    .m{ec}-auto
+        margin-{e} auto
