Update built CSS

--- a/src/base/display.styl
+++ b/src/base/display.styl
@@ -1,5 +1,5 @@
 // Copyright 2022 Furqan Software Ltd. All Rights Reserved.
 
-for v in 'block' 'inline' 'inline-block'
+for v in block inline inline-block
     .d-{v}
         display v
