--- a/src/base/reset.styl
+++ b/src/base/reset.styl
@@ -5,6 +5,9 @@
 ::after
 	box-sizing border-box
 
+html
+	line-sizing normal
+
 article,
 aside,
 details,
@@ -30,8 +33,10 @@ p,
 pre
 	margin 0	
 
-html
-	line-sizing normal
+table
+	border-spacing 0
+	border-collapse collapse
+	background-color transparent
 
 // TO REMOVE OR MOVE ELSEWHERE
 
