--- a/src/base/reset.styl
+++ b/src/base/reset.styl
@@ -38,6 +38,9 @@ table
 	border-collapse collapse
 	background-color transparent
 
+th
+	text-align left
+
 // TO REMOVE OR MOVE ELSEWHERE
 
 @require './func'
