Update subtle button style

--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -95,6 +95,7 @@ _button('simple', white)
 .btn.-subtle
 	border 1px solid transparent
 	background-color transparent
+	color $dark
 
 	&.-subtle:hover,
 	&.-subtle:focus
