--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -96,9 +96,12 @@
 		.progress
 			margin-bottom 0
 
-	&__foot.-shade
+	&__foot
 		padding 1rem 1.25rem
-		background-color lighten($silver, 75%)
+
+		&.-shade
+			border-radius 0 0 0.25rem 0.25rem
+			background-color lighten($silver, 75%)
 
 	&__title
 		float left
