--- a/src/widgets/modal/index.styl
+++ b/src/widgets/modal/index.styl
@@ -75,6 +75,7 @@
 		padding 1rem 1.25rem
 
 		&.-shade
+			border-radius 0 0 0.25rem 0.25rem
 			background-color lighten($silver, 75%)
 
 @media (min-width: 768px)
