--- a/src/base/artifact.styl
+++ b/src/base/artifact.styl
@@ -26,8 +26,8 @@
 	h4
 		line-height 1.2em
 	
-	p > img,
-	p > picture > img
+	img,
+	svg
 		display block
 		margin 0 auto 8px
 		max-width 100%
@@ -36,10 +36,6 @@
 		width 100%
 		max-width 100%
 
-	table.-samples
-		> tbody > tr > td
+		th,
+		td
 			vertical-align top
-
-		pre
-			padding 0
-			margin 0
