--- a/src/base/progress.styl
+++ b/src/base/progress.styl
@@ -1,15 +1,11 @@
 // Copyright 2021 Furqan Software Ltd. All Rights Reserved.
 
 .progress
-	height 20px
-	margin-bottom 20px
+	display flex
+	height 1rem
 	overflow hidden
-	background-color transparent
 
 	&__bar
-		float left
 		width 0
 		height 100%
-		line-height 20px
-		color white
-		text-align center
+		line-height 1rem
