--- a/src/base/avatar.styl
+++ b/src/base/avatar.styl
@@ -12,28 +12,28 @@
 		border-radius 0.25rem
 
 	&.-sm
-		width 40px
+		width 2.5rem
 		
 		+ .handle
 			margin-left 0.5rem
 		
 	&.-xs
-		width 20px
+		width 1.5rem
 		
 		+ .handle
-			margin-left 5px
+			margin-left 0.5rem
 			vertical-align middle
 
 	.emblem
 		position absolute
 		right -3px
 		bottom -5px
-		width 24px
-		height 18px
+		width 1.5rem
+		height 1.125rem
 		margin 0
 		transition opacity $fast ease, transform $fast ease
 
 	&:hover
 		.emblem
-			transform translateY(10px)
+			transform translateY(0.5rem)
 			opacity 0
