--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -14,6 +14,10 @@ body
 	margin-bottom 1.5rem
 	border-bottom 1px solid lighten($silver, 75%)
 	background white
+	
+	&__body
+		display flex
+		align-items center
 
 	&__logo
 		float left
@@ -24,9 +28,8 @@ body
 		box-shadow 0 0.0625rem 0.125rem $shadow1
 
 .pmenu
-	float right
 	display flex
-	margin 1rem 0
+	margin-left auto
 
 	&__item
 		position relative
