--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -19,7 +19,7 @@
 		input
 			width 100%
 			margin 0
-			padding 0.75rem 1rem 0.75rem 2rem
+			padding 1rem 1rem 1rem 2rem
 			border none
 
 			&:focus
@@ -103,7 +103,7 @@
 			width 12.5rem
 			
 			input
-				padding 1.35rem 1rem 1.35rem 2rem
+				line-height 2.5rem
 			
 			.icon
 				top 1.725rem
@@ -112,7 +112,8 @@
 			&.-link,
 			&.-drop > a
 				position relative
-				padding 1.35rem 1rem
+				line-height 2.5rem
+				padding 1rem
 
 			&.-drop
 				position relative
