Simplify pnav search icon positioning style

--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -27,8 +27,9 @@
 		
 		.icon
 			position absolute
-			top 1.125rem
+			top 50%
 			left 0.25rem
+			margin-top -0.5rem
 			line-height inherit
 			opacity 0.75
 		
@@ -104,9 +105,6 @@
 			
 			input
 				line-height 2.5rem
-			
-			.icon
-				top 1.725rem
 		
 		&__item
 			&.-link,
