Move base styles out of base directory

--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
-@require '../../../base/const'
-@require '../../../base/palette'
+@require '../../../const'
+@require '../../../palette'
 
 .pnav
 	display none
@@ -19,7 +19,7 @@
 		input
 			width 100%
 			margin 0
-			padding 1rem 1rem 1rem 2rem
+			padding 1rem 0.25rem 1rem 2rem
 			border none
 
 			&:focus
@@ -101,7 +101,7 @@
 
 		&__search
 			float right
-			width 12.5rem
+			width 11rem
 			
 			input
 				line-height 2.5rem
