--- a/src/widgets/breadcrumb/index.styl
+++ b/src/widgets/breadcrumb/index.styl
@@ -1,7 +1,7 @@
 // Copyright 2021 Furqan Software Ltd. All rights reserved.
 
-@require '../../base/func'
-@require '../../base/palette'
+@require '../../func'
+@require '../../palette'
 
 .breadcrumb
 	display flex
