--- a/src/widgets/modal/index.styl
+++ b/src/widgets/modal/index.styl
@@ -1,8 +1,8 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
-@require '../../base/const'
-@require '../../base/func'
-@require '../../base/palette'
+@require '../../const'
+@require '../../func'
+@require '../../palette'
 
 .modal
 	position fixed
