--- a/src/layouts/site/index.styl
+++ b/src/layouts/site/index.styl
@@ -1,8 +1,8 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
-@require '../../base/const'
-@require '../../base/func'
-@require '../../base/palette'
+@require '../../const'
+@require '../../func'
+@require '../../palette'
 
 body
 	display flex
