--- a/src/layouts/site/parts/pblip.styl
+++ b/src/layouts/site/parts/pblip.styl
@@ -1,7 +1,7 @@
 // Copyright 2020 Furqan Software Ltd. All rights reserved.
 
-@require '../../../base/const'
-@require '../../../base/palette'
+@require '../../../const'
+@require '../../../palette'
 
 .pblip
 	margin -1.5rem 0 1.5rem
