--- a/src/alert.styl
+++ b/src/alert.styl
@@ -24,10 +24,8 @@
 	
 	&__icon
 		margin-right 1rem
+		font-size 1.25rem
 		line-height 0
-
-		.icon
-			font-size 1.5em
 
 	&__close
 		position absolute
