Center artifact images when part of content only

--- a/src/artifact.styl
+++ b/src/artifact.styl
@@ -26,8 +26,9 @@
 	h4
 		line-height 1.2em
 	
-	img,
-	svg
+	> * > img,
+	> * > picture > img,
+	> * > svg
 		display block
 		margin 0 auto 8px
 		max-width 100%
