--- a/src/widgets/modal/index.styl
+++ b/src/widgets/modal/index.styl
@@ -64,7 +64,12 @@
 				margin-bottom -1rem
 		
 	&__cross
+		display block
 		float right
+		width 2rem
+		height 2rem
+		margin-right -0.375rem
+		text-align center
 
 	&__body
 		padding 1rem 1.25rem
