Add helpers for white

--- a/src/color.styl
+++ b/src/color.styl
@@ -18,6 +18,7 @@ _color('blue', $blue)
 _color('green', $green)
 _color('red', $red)
 _color('orange', $orange)
+_color('white', white)
 
 .font-white
 	color white
