Add grow effect to site pnav search field

--- a/src/layouts/site/parts/pnav.styl
+++ b/src/layouts/site/parts/pnav.styl
@@ -102,9 +102,13 @@
 		&__search
 			float right
 			width 11rem
+			transition width 0.125s ease-in-out
 			
 			input
 				line-height 2.5rem
+			
+			&:focus-within
+				width 17rem
 		
 		&__item
 			&.-link,
