Reduce body font size

--- a/src/reset.styl
+++ b/src/reset.styl
@@ -6,6 +6,7 @@
 	box-sizing border-box
 
 html
+	font-size 16px
 	line-sizing normal
 
 article,
@@ -50,38 +51,6 @@ th
 
 label
 	font-weight normal
-
-// pre,
-// pre[class*="language-"],
-// .pre,
-// code,
-// code[class*="language-"]
-// 	font-family 'Ubuntu Mono', monospace
-// 	font-size 1.05em
-
-// pre
-// 	border-radius 2px
-
-// code
-// 	border none
-// 	box-shadow none
-
-// pre[class*="language-"] code
-// 	display block
-
-// 	.line-numbers
-// 		padding-left 3.8em !important
-
-// dl
-// 	dt
-// 		margin-bottom 4px
-// 		font-weight 500
-
-// 		.icon
-// 			margin-top -4px
-
-// 	dd .item
-// 		margin-bottom 5px
 
 .hidden
 	display none
