--- a/src/typography.styl
+++ b/src/typography.styl
@@ -2,11 +2,9 @@
 
 @require './const'
 
-html
-	font-size 16px
-
 body 
 	font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, 'Hind Siliguri', Cantarell, 'Helvetica Neue', sans-serif
+	font-size 0.875rem
 	line-height 1.75em
 	color $dark
 	direction 'ltr'
