--- a/src/dashlet.styl
+++ b/src/dashlet.styl
@@ -41,14 +41,13 @@
 		position static
 		padding 0.5rem
 		text-align left
-		font-size 0.95rem
 		
 	&.-xs.-subtle &__body
 		padding 0.5rem 0
 	
 	&__stat
 		margin-bottom 0.5rem
-		font-size 2rem
+		font-size 1.5rem
 		line-height 1em
 
 	&.-sm &__stat
@@ -64,14 +63,14 @@
 	&__mark
 		display block
 		float left
-		width 5rem
-		height 5rem
+		width 4.25rem
+		height 4.25rem
 		margin 0 0 1rem -2rem
 		padding 0.5rem 0 0 1rem
-		font-size 7.5rem
+		font-size 6.25rem
 		line-height 1em
 		opacity 0.0625
-		transition transform $fast ease-in
+		transition opacity $fast ease-in
 
 	&.-sm &__mark
 		float right
@@ -82,7 +81,7 @@
 	&.-xs &__mark
 		float right
 		width 2rem
-		height 2rem
+		height 1.875rem
 		margin 0 0.5rem 0 -2rem
 		padding 0
 		font-size 3rem
@@ -115,4 +114,4 @@
 			border-color $blueglow
 
 			.dashlet__mark
-				transform scale(1.15)
+				opacity 0.09375
