Update copyright line

--- a/src/widgets/pills/index.styl
+++ b/src/widgets/pills/index.styl
@@ -1,4 +1,4 @@
-// Copyright 2023 Furqan Software Ltd. All rights reserved.
+// Copyright 2024 Furqan Software Ltd. All Rights Reserved.
 
 @require '../../const'
 @require '../../palette'
