--- a/src/widgets/handle/index.styl
+++ b/src/widgets/handle/index.styl
@@ -1,4 +1,4 @@
-// Copyright 2023 Furqan Software Ltd. All rights reserved.
+// Copyright 2024 Furqan Software Ltd. All Rights Reserved.
 
 .handle
 	padding 0.25rem 0.5rem
