Set field placeholder color

--- a/src/form.styl
+++ b/src/form.styl
@@ -26,6 +26,9 @@
 			border-color $blue
 			outline 0
 			box-shadow inset 0 0.25rem 0.125rem $shadow0, 0 0 0 0.25rem $blueglow
+		
+		&::placeholder
+			color $muted
 			
 	&__field[readonly],
 	&__field[disabled]
