Limit handle hover effect to anchors only

--- a/src/widgets/handle/index.styl
+++ b/src/widgets/handle/index.styl
@@ -55,8 +55,8 @@
 	&.-e
 		background-color alpha(#4e2388, 0.05)
 
-.handle:hover,
-.handle:focus
+a.handle:hover,
+a.handle:focus
 	background-color alpha(#555555, 0.1)
 	
 	&.-sss
